<resources>
    <string name="app_name">iBuy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tvUsuarioLogin">Usuario</string>
    <string name="tvPasswordLogin">Contraseña</string>
    <string name="btnEntrarLogin">Entrar</string>
    <string name="btnNuevaCompraMenuPrincipal">Nueva Compra</string>
    <string name="btnHistorialComprasMenuPrincipal">Historial de Compras</string>
    <string name="btnConfUsuarioMenuPrincipal">Configuración de Usuario</string>
    <string name="btnSalirMenuPrincipal">Salir</string>
    <string name="ttlHistorialCompras">Historial de Compras</string>
    <string name="ttlInfoCompra">Información de Compra</string>
    <string name="opFiltrarMenuHistorialCompras">Filtrar</string>
    <string name="opMenuPrincipalMenuHistorialCompras">Menú</string>
    <string name="opSalirMenuHistorialCompras">Salir</string>
    <string name="fechaPorDefecto">00/00/00, 00:00 pm</string>
    <string name="textoPorDefecto">Esto es un texto por defecto</string>
    <string name="numeroporDefecto">12345678910</string>
    <string name="opFiltrarMenuInfoCompra">Filtrar</string>
    <string name="opMenuPrincipalMenuInfoCompra">Menu</string>
    <string name="opSalirMenuInfoCompra">Salir</string>
    <string name="ramsheka">Ramasheka Talamasoa</string>
    <string name="decimalPordefecto">1234567.78910</string>
    <string name="lblSucursalFiltrarCompras">Sucursal</string>
    <string name="rcTodasSucursalesFiltrarCompras">Todas</string>
    <string name="lblTituloFiltrarCompras">Filtrar Compras</string>
    <string name="lblFechaFiltrarCompras">Fecha</string>
    <string name="rcTodasFechasFiltrarCompras">Todas</string>
    <string name="rcFechaEspecificaFiltrarCompras">Específica</string>
    <string name="rcRangoFechasFiltrarCompras">Rango</string>
    <string name="ccDesdeFechaFiltrarCompras">Desde</string>
    <string name="ccHastaFechaFiltrarCompras">Hasta</string>
    <string name="lblMontoMinimoFiltrarCompras">Monto Mínimo</string>
    <string name="btnOkFiltrarCompras">Ok</string>
    <string name="btnPorDefectoFiltrarCompras">Por Defecto</string>
    <string name="rcSucursalEspecificaFiltrarCompras">Específica</string>
    <string name="lblFechaDefectoFiltrarCompras">00/00/0000</string>
    <string name="opMenuPrincipalMenuFiltrarCompras">Menú</string>
    <string name="opSalirMenuFiltrarCompras">Salir</string>
    <string name="ttlFiltrarCompras">Filtrar Compras</string>
    <string name="lblOrdenFiltrarCompras">Orden</string>
    <string name="rcAscendenteFiltrarCompras">Ascendente</string>
    <string name="rcDescendenteFiltrarCompras">Descendente</string>
    <string name="lblTituloFiltrarArticulosCompra">Filtrar Articulos de Compra</string>
    <string name="lblOrdenarPor">Ordenar por</string>
    <string name="rcNombreFiltrarArticulosCompra">Nombre</string>
    <string name="rcCantidadFiltrarArticulosCompra">Cantidad</string>
    <string name="rcPrecioFiltrarArticulosCompra">Precio</string>
    <string name="lblOrden">Orden</string>
    <string name="rcAscendenteFiltrarArticulosCompra">Ascendente</string>
    <string name="rcDescendenteFiltrarArticulosCompra">Descendente</string>
    <string name="btnOkFiltrarArticulosCompra">Ok</string>
    <string name="btnPorDefectoFiltrarArticulosCompra">Por Defecto</string>
    <string name="btnFiltrarArticulosCompras">FIltrar</string>
    <string name="opMenuPrincipalMenuFiltrarArticulosCompra">Menú</string>
    <string name="opSalirFiltrarMenuArticulosCompra">Salir</string>
    <string name="ttlFiltrarArticulosCompra">Filtrar Artículos de Compra</string>
    <string name="btnRegistrarLogin">Registrar</string>
    <string-array name="numeros">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <!--Formulario de nuevo usuario-->
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="registrar">Registrar</string>
    <!--Tarjeta de credito-->
    <string name="metodoPago">Método de Pago</string>
    <string name="numeroTarjeta">Número  Tarjeta</string>
    <string name="fechaValida">Fecha Validez</string>
    <string name="codigo">Código Seguridad</string>
    <string name="nombreTarjeta">Nombre Completo</string>
    <string name="direccion">Dirección</string>
    <string name="codigoPostal">Código Postal</string>
    <string name="agregar">Agregar</string>

    <string name="cancelar">Cancelar</string>
    <!--mes y año tarjeta-->
    <string-array name="mes">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="year">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
    </string-array>

    <!--Array con los valores de la cabecera de la tabla lista tarjetas-->
    <string-array name="cabecera_tabla">
        <item>Número de Tarjeta</item>
        <item>Opciones</item>
    </string-array>
</resources>
