<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblFechaHoraCompraView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fechaPorDefecto"
            android:theme="@style/lblFechaHoraHistorialCompras" />

        <ImageButton
            android:id="@+id/btnVerMasCompraView"
            android:layout_width="20dp"
            android:layout_height="40dp"
            android:layout_marginStart="50dp"
            android:layout_weight="1"
            android:theme="@style/btnVerMasHistorialCompras"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <HorizontalScrollView
            android:layout_width="200dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblSucursalCompraView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ramsheka"
                    android:theme="@style/lblSucursalHistorialCompras" />
            </LinearLayout>

        </HorizontalScrollView>

        <HorizontalScrollView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblMontoCompraView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/decimalPordefecto"
                    android:theme="@style/lblMontoHistorialCompras" />
            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>
</LinearLayout>